--- a/index.html
+++ b/index.html
@@ -6,42 +6,198 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>i18n-render demo</title>
   <style>
-    .main {
-      padding: 80px;
-    }
+    body,html{margin:0}body{padding:2em}a{word-break:break-all}pre{width:100%;padding:1em;overflow:auto}code,pre{background-color:#eee}code{color:#8b0000}button{background-image:-webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));background-image:-webkit-linear-gradient(top,#f5f5f5,#f1f1f1);-webkit-border-radius:2px;-webkit-user-select:none;background-color:#f2f2f2;border:1px solid #f2f2f2;border-radius:4px;color:#5f6368;cursor:pointer;font-family:arial,sans-serif;font-size:14px;margin:11px 4px;min-width:54px;padding:0 16px;text-align:center;height:36px;line-height:27px}button:hover{background-image:-webkit-gradient(linear,left top,left bottom,from(#f8f8f8),to(#f1f1f1));background-image:-webkit-linear-gradient(top,#f8f8f8,#f1f1f1);-webkit-box-shadow:0 1px 1px rgba(0,0,0,.1);background-color:#f8f8f8;background-image:linear-gradient(top,#f8f8f8,#f1f1f1);background-image:-o-linear-gradient(top,#f8f8f8,#f1f1f1);border:1px solid #c6c6c6;box-shadow:0 1px 1px rgba(0,0,0,.1);color:#222}button:focus{border:1px solid #4d90fe;outline:none}@media screen and (max-width:900px){body{padding:1em}}
   </style>
 </head>
 <body>
-<div class="main">
-  <h1>i18n render</h1>
-  <p>change locale:</p>
-  <div class="controls">
-    <button class="control" data-locale="en">en</button>
-    <button class="control" data-locale="fr">fr</button>
-    <button class="control" data-locale="de">de</button>
-    <button class="control" data-locale="zh-CN">zh-CN</button>
-    <button class="control" data-locale="zh-HK">zh-HK</button>
-    <button class="control" data-locale="jp">jp</button>
-  </div>
-  <p>
-    current locale:
-    <span id="current" class="current"></span>
-  </p>
-  <h2>preview</h2>
-  <div class="demo">
-    <p id="preview" ir="example1"></p>
-  </div>
-  <hr>
-  <p>
-    text source from:
-    <a href="http://www.columbia.edu/~fdc/utf8/index.html">http://www.columbia.edu/~fdc/utf8/index.html</a>
-  </p>
-  <p>
-    built by
-    <a href="https://github.com/gucheen/i18n-render">gucheen @Github</a>
-  </p>
+<h1>i18n render</h1>
+<p>tiny i18n solution for tiny projects.</p>
+<p>change locale:</p>
+<div class="controls">
+  <button class="control" data-locale="en">en</button>
+  <button class="control" data-locale="fr">fr</button>
+  <button class="control" data-locale="de">de</button>
+  <button class="control" data-locale="zh-CN">zh-CN</button>
+  <button class="control" data-locale="zh-HK">zh-HK</button>
+  <button class="control" data-locale="jp">jp</button>
 </div>
-<a href="https://github.com/gucheen/i18n-render" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+<p>
+  current locale:
+  <span id="current" class="current"></span>
+</p>
+<h2>preview</h2>
+<div class="demo">
+  <p id="preview" ir="example1"></p>
+</div>
+<hr>
+<p>
+  text source from:
+  <a href="http://www.columbia.edu/~fdc/utf8/index.html">http://www.columbia.edu/~fdc/utf8/index.html</a>
+</p>
+<p>
+  built by
+  <a href="https://github.com/gucheen/i18n-render">gucheen @Github</a>
+</p>
+<h2 id="design">Design</h2>
+<p>The i18n-render&#39;s structure is <code>key -&gt; translation dictionary</code>. While the translation dict is
+  <code>locale -&gt; text</code>.</p>
+<p>In short, i18n-render take a <code>key</code> to get the translation dict, then get translated text with <code>locale</code>
+</p>
+<h2 id="source-configuration">Source Configuration</h2>
+<pre><code class="lang-js">const source = {
+  example1: {
+    en: &#39;I can eat glass and it doesn\&#39;t hurt me.&#39;,
+    fr: &#39;Je peux manger du verre, ça ne me fait pas mal.&#39;,
+    de: &#39;Ich kann Glas essen, ohne mir zu schaden.&#39;,
+    &#39;zh-CN&#39;: &#39;我能吞下玻璃而不伤身体。&#39;,
+    &#39;zh-HK&#39;: &#39;我能吞下玻璃而不傷身體。&#39;,
+    jp: &#39;私はガラスを食べられます。それは私を傷つけません。&#39;,
+  },
+};
+
+// or
+const source = {
+  example1: {
+    &#39;en-US&#39;: &#39;I can eat glass and it doesn\&#39;t hurt me.&#39;,
+    &#39;fr-FR&#39;: &#39;Je peux manger du verre, ça ne me fait pas mal.&#39;,
+    &#39;de-DE&#39;: &#39;Ich kann Glas essen, ohne mir zu schaden.&#39;,
+    &#39;zh-CN&#39;: &#39;我能吞下玻璃而不伤身体。&#39;,
+    &#39;zh-HK&#39;: &#39;我能吞下玻璃而不傷身體。&#39;,
+    &#39;jp-JP&#39;: &#39;私はガラスを食べられます。それは私を傷つけません。&#39;,
+  },
+}
+</code></pre>
+<h2 id="api">API</h2>
+<h3 id="class-i18nrender-constructor">class I18nRender constructor</h3>
+<table>
+  <thead>
+  <tr>
+    <th>parameter</th>
+    <th>value</th>
+    <th>description</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>source</td>
+    <td><code>Object&lt;string, string&gt;</code></td>
+    <td>Translation dictionaries for various languages</td>
+  </tr>
+  <tr>
+    <td>locale</td>
+    <td><code>string</code></td>
+    <td>Set locale directly instead of auto detect</td>
+  </tr>
+  <tr>
+    <td>pageTextLocale</td>
+    <td><code>string</code></td>
+    <td>If your page already has text in a certain language, setting this parameter can prevent the re-rendering of
+      this language, and you do not need to provide translation of this language.
+    </td>
+  </tr>
+  <tr>
+    <td>fullLangTag</td>
+    <td><code>boolean</code></td>
+    <td>I18n-render uses a short locale tag by default, such as <code>en</code>, <code>fr</code>, <code>de</code>,
+      <code>jp</code>. However, languages can distinguish regions, such as <code>zh-CN</code> and <code>zh-HK</code>,
+      which need two different translation versions. In this case, <code>fullLangTag: true</code> can be set, and the
+      configuration items of the language will become complete modes, such as <code>en-US</code> and
+      <code>zh-CN</code></td>
+  </tr>
+  </tbody>
+</table>
+<h3 id="getlocale-string">getLocale() =&gt; string</h3>
+<p>Get current locale of i18n-render.</p>
+<h3 id="setlocale-">setLocale()</h3>
+<p>Change to another locale manualy.</p>
+<ul>
+  <li><strong>locale</strong> <code>string</code> the target locale</li>
+  <li><strong>persist</strong> <code>boolean?,false</code> store locale to localStorage, next time i18n-render will
+    init with this locale
+  </li>
+  <li><strong>rerender</strong> <code>boolean?,true</code> re-render page text after change locale</li>
+</ul>
+<h3 id="gettext-string">getText() =&gt; string</h3>
+<p>Get the i18n text of the target text with <code>key</code></p>
+<ul>
+  <li><strong>key</strong> <code>string</code> the key of text in translation dict</li>
+  <li><strong>locale</strong> <code>string?</code> the locale want to use, <strong>default to current locale of
+    i18n-render</strong></li>
+  <li><strong>fallback</strong> <code>string?</code> this fallback text will be used if the target statement does not
+    have a translation dictionary configured or if there is no corresponding language setting.
+  </li>
+</ul>
+<h3 id="render-">render()</h3>
+<p>Render all i18n-render elements in page.</p>
+<h2 id="example">example</h2>
+<pre><code class="lang-html">&lt;body&gt;
+  &lt;p ir=&quot;example1&quot;&gt;这是一段默认的中文&lt;/p&gt;
+&lt;/body&gt;
+</code></pre>
+<pre><code class="lang-js">// import I18nRender from &#39;i18n-render&#39;;
+
+const i18n = new I18nRender({
+  source,
+  pageTextLocale: &#39;zh&#39;,
+});
+document.addEventListener(&#39;DOMContentLoaded&#39;, () =&gt; {
+  i18n.render();
+});
+</code></pre>
+<h2 id="mit-license">MIT License</h2>
+<p>Copyright (c) 2019 Cheng Gu</p>
+<p>Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the &quot;Software&quot;), to deal
+  in the Software without restriction, including without limitation the rights
+  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:</p>
+<p>The above copyright notice and this permission notice shall be included in all
+  copies or substantial portions of the Software.</p>
+<p>THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  SOFTWARE.</p>
+<a href="https://github.com/gucheen/i18n-render" class="github-corner" aria-label="View source on GitHub">
+  <svg width="80" height="80" viewBox="0 0 250 250"
+       style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+    <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+    <path
+      d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+      fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+    <path
+      d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+      fill="currentColor" class="octo-body"></path>
+  </svg>
+</a>
+<style>.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+  0%, 100% {
+    transform: rotate(0)
+  }
+  20%, 60% {
+    transform: rotate(-25deg)
+  }
+  40%, 80% {
+    transform: rotate(10deg)
+  }
+}
+
+@media (max-width: 500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+  }
+}</style>
 <script src="umd.js"></script>
 <script src="demo.js"></script>
 </body>
